samples/_failures_safe/1761559338_1b21a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e218434e.c: In function ‘parse_term’:
./samples/SAFE/__tmp_e218434e.c:169:5: error: expected expression at end of input
  169 |     int result =
      |     ^~~
./samples/SAFE/__tmp_e218434e.c:169:5: error: expected declaration or statement at end of input
